# starting-ragchatbot-codebase

./: .env.example  .flake8  CLAUDE.md  README.md  flow_visualization.html  format.sh  frontend-changes.md  lint.sh  pyproject.toml  quality-check.sh  request_flow_visualization.html  run.sh  search_tools_diagram.html
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py
backend/tests/: QUICK_START.md  README.md  __init__.py  conftest.py  test_api.py
frontend/: index.html  script.js  style.css
